# task_motion_planning_cds

./: README.md
lasa-action-planners/: CMakeLists.txt  PouringDemoInstructions  Pouring_Simulation_on_LASA  RollingDemoInstructions  RollingDemoInstructions_LASA  Rolling_Simulation_on_Boxy  Rolling_Simulation_on_LASA  boxy_start_config.yaml  package.xml  setup.py
lasa-action-planners/action/: PLAN2CTRL.action
lasa-action-planners/scripts/: plan2ctrl_client.py  plan2ctrl_server.py  pouring_demo_OneSeq_lasa.py  pouring_demo_fixed_lasa.py  pouring_demo_vision_lasa.py  pouring_tool_demo_fixed_lasa.py  rolling_demo_OneSeq.py  rolling_demo_boxy.py  rolling_demo_boxy_v2.py  rolling_demo_fixed.py  rolling_demo_hhri.py  rolling_demo_lasa.py  rolling_demo_lasa_new.py  rolling_demo_lasa_new_autonomous.py  rolling_sequence.py
lasa-action-planners/src/: plan2ctrl_server.cpp
motion_planner/: .package.xml.kate-swp  CMakeLists.txt  package.xml
motion_planner/include/: fri_cart_control.h
motion_planner/launch/: boxy_fixed.launch  boxy_sim_fixed.launch  boxy_sim_fixed_robohow.launch  lasa_fixed.launch  lasa_fixed_pouring.launch  lasa_fixed_pouring_tool.launch  lasa_sim_fixed.launch  lasa_sim_fixed_pouring.launch  vision.launch  vision_boxy.launch  vision_lasa.launch  vision_lasa_hhri.launch  vision_lasa_new_autonomous.launch  vision_robot_sim.launch
motion_planner/src/: fri_cart_control_init.cpp  motion_planner.cpp  motion_planner_hhri.cpp  motion_planner_hhri_back.cpp  motion_planner_lasa.cpp  motion_planner_pouring.cpp  motion_planner_pouring_tool.cpp  motion_planner_robohow.cpp  test_force.cpp  test_pour.cpp  test_rolling.cpp  test_traj.cpp
robohow_common_msgs/: CMakeLists.txt  package.xml
robohow_common_msgs/action/: ConstraintMotion.action
robohow_common_msgs/msg/: Constraint.msg  ConstraintCommand.msg  ConstraintConfig.msg  Feature.msg  GaussianDistribution.msg  GaussianMixtureModel.msg  GeometricConstraint.msg  GeometricConstraintState.msg  GeometricExpression.msg  GeometricExpressionMonitor.msg  GraspStability.msg  MotionModel.msg  MotionPhase.msg
robohow_common_msgs/srv/: GraspStabilityControl.srv
state_transformers/: CMakeLists.txt  package.xml
(+40 files in other folders)
