<?xml version="1.0"?>
<package>
  <name>robohow_common_msgs</name>
  <version>0.0.0</version>
  <description>The catkinized robohow_common_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nadia.figueroafernandez@epfl.ch">nbfigueroa</maintainer>
<!--   <author>Georg Bartels, Francois Keith, Ingo Kresse, Lucia Pais, Moritz Tenorth</author> -->

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend> 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
